--- a/styles/_silent-class.scss
+++ b/styles/_silent-class.scss
@@ -18,3 +18,19 @@
   font-size: 16px;
   line-height: 20px;
 }
+%card-text-font {
+  font-size: 16px;
+  line-height: 26px;
+  color: #ffffff;
+}
+%custom-font {
+  font-weight: bold;
+  font-size: 38px;
+  line-height: 46px;
+}
+%gradient-1 {
+  background-image: linear-gradient(90deg, #f0145a, #ef8080);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
