--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,7 @@
-.main, .main::before, .main::after {
+.main::after, .main::before, .main {
   border-radius: 0px 0px 12px 12px;
   -webkit-box-shadow: 0px 5px 6px -4px #223c50;
+  -moz-box-shadow: 0px 5px 6px -4px #223c50;
   box-shadow: 0px 5px 6px -4px #223c50;
 }
 
@@ -8,9 +9,7 @@
 .main .header .header-contacts .phone-number::after,
 .main .header .header-contacts .social-link::after {
   content: "";
-  -webkit-box-ordinal-group: 0;
-      -ms-flex-order: -1;
-          order: -1;
+  order: -1;
   display: block;
   width: 6px;
   height: 6px;
@@ -19,20 +18,38 @@
   background-color: #e6e6f0;
 }
 
-.main .header .header-contacts .address,
+.main .header .header-nav .nav-link, .main .header .header-contacts .address,
 .main .header .header-contacts .phone-number,
-.main .header .header-contacts .social-link, .main .header .header-nav .nav-link {
+.main .header .header-contacts .social-link {
   font-size: 16px;
   line-height: 20px;
+}
+
+.main .services-cards .services-card .card-text {
+  font-size: 16px;
+  line-height: 26px;
+  color: #ffffff;
+}
+
+.main .slogan, .main .goals-wrapper .goals .custom-item1, .main .goals-wrapper .goals .goal-item {
+  font-weight: bold;
+  font-size: 38px;
+  line-height: 46px;
+}
+
+.main .slogan, .main .goals-wrapper .goals .custom-item1 {
+  background-image: linear-gradient(90deg, #f0145a, #ef8080);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .main {
   position: relative;
   margin: 0;
-  padding: 0;
+  padding-bottom: 60px;
   background-image: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643e72 87.46%);
 }
-
 .main::before {
   content: "";
   position: absolute;
@@ -42,7 +59,6 @@
   height: 10px;
   background-color: #cacadb;
 }
-
 .main::after {
   content: "";
   position: absolute;
@@ -52,54 +68,33 @@
   height: 10px;
   background-color: #e7e7f2;
 }
-
 .main .header {
   padding-top: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .main .header .logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
 }
-
 .main .header .header-contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .main .header .header-contacts .langs-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin: 0;
   padding-left: 0;
   list-style: none;
 }
-
 .main .header .header-contacts .lang-btn {
   display: block;
   padding: 5px 6px;
   border: none;
   border-radius: 8px;
   background-color: transparent;
-  color: #fff;
+  color: #ffff;
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
@@ -107,51 +102,35 @@
   letter-spacing: 1px;
   cursor: pointer;
 }
-
 .main .header .header-contacts .address,
 .main .header .header-contacts .phone-number,
 .main .header .header-contacts .social-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-weight: 100;
-  color: #ffffff;
+  align-items: center;
+  font-weight: normal;
+  color: #ffff;
   text-decoration: none;
 }
-
 .main .header .header-contacts .phone-number {
   font-weight: bold;
 }
-
 .main .header .header-contacts .address:hover,
 .main .header .header-contacts .phone-number:hover,
 .main .header .header-contacts .social-link:hover {
   color: #c1446b;
 }
-
 .main .header .header-contacts .lang-btn:hover {
-  -webkit-box-shadow: inset 0 0 0 2px #f0145a;
-          box-shadow: inset 0 0 0 2px #f0145a;
+  box-shadow: inset 0 0 0 2px #f0145a;
 }
-
 .main .header .header-contacts .lang-btn-active {
   background-color: #f0145a;
 }
-
 .main .header .header-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   gap: 0 15px;
   margin-top: 16px;
 }
-
 .main .header .header-nav .nav-link {
   border-bottom: 2px solid transparent;
   padding-bottom: 2px;
@@ -159,8 +138,83 @@
   color: #fff;
   text-decoration: none;
 }
-
+.main .header .header-nav .nav-link:hover {
+  color: #c1446b;
+}
+.main .goals-wrapper {
+  margin-top: 60px;
+  padding: 0 120px;
+  display: flex;
+}
+.main .goals-wrapper .goals {
+  flex-shrink: 1;
+  flex-grow: 1;
+  padding: 14.5px 60px 14.5px 0;
+  gap: 30px;
+  max-width: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  border-right: 4px solid rgba(255, 255, 255, 0.3);
+}
+.main .goals-wrapper .goals .goal-item {
+  color: #b3b3ba;
+}
+.main .goals-wrapper .goals .custom-item2 {
+  color: #f0145a;
+}
+.main .goals-wrapper .goal-slogan {
+  padding: 73px 0 73px 60px;
+  max-width: 65%;
+}
+.main .goals-wrapper .goal-slogan .goal-title {
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 37px;
+  color: #ffff;
+}
+.main .goals-wrapper .goal-slogan .goal-text {
+  margin-top: 30px;
+  font-size: 19px;
+  line-height: 30px;
+  color: #ffff;
+}
 .main .services-link {
   margin-top: 60px;
 }
+.main .slogan {
+  width: fit-content;
+  margin-top: 10px;
+}
+.main .services-cards {
+  margin: 60px 0 0;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px 60px;
+}
+.main .services-cards .services-card {
+  flex-shrink: 1;
+  flex-grow: 1;
+  flex-basis: 493px;
+}
+.main .services-cards .services-card .card-header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+.main .services-cards .services-card .card-title {
+  margin-top: 30px;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 27px;
+  color: #24a3ff;
+  font-weight: 500;
+}
+.main .services-cards .services-card .card-text {
+  margin: 15px 0 0;
+}
+
 /*# sourceMappingURL=home.css.map */
