кроме команды, публикаций нормального футера  и адаптива

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -6,8 +6,18 @@
 body {
   margin: 0;
 }
-.container {
+.container-1 {
   max-width: 1600px;
+  margin: 0 auto;
+  padding: 0;
+}
+.container-2 {
+  max-width: 1720px;
+  margin: 0 auto;
+  padding: 0;
+}
+.container-3 {
+  max-width: 1360px;
   margin: 0 auto;
   padding: 0;
 }
