--- a/styles/home.css
+++ b/styles/home.css
@@ -1,15 +1,16 @@
-.main::after, .main::before, .main {
+.main, .main::before, .main::after {
   border-radius: 0px 0px 12px 12px;
   -webkit-box-shadow: 0px 5px 6px -4px #223c50;
-  -moz-box-shadow: 0px 5px 6px -4px #223c50;
   box-shadow: 0px 5px 6px -4px #223c50;
 }
 
-.main .header .header-contacts .address::after,
-.main .header .header-contacts .phone-number::after,
-.main .header .header-contacts .social-link::after {
+.main .header .header-inner .header-inner-wrapper .header-contacts .address::after,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number::after,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link::after {
   content: "";
-  order: -1;
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
   display: block;
   width: 6px;
   height: 6px;
@@ -18,9 +19,9 @@
   background-color: #e6e6f0;
 }
 
-.main .header .header-nav .nav-link, .main .header .header-contacts .address,
-.main .header .header-contacts .phone-number,
-.main .header .header-contacts .social-link {
+.main .header .header-inner .header-inner-wrapper .header-contacts .address,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link, .main .header .header-nav .nav-link {
   font-size: 16px;
   line-height: 20px;
 }
@@ -31,13 +32,14 @@
   color: #ffffff;
 }
 
-.main .slogan, .main .goals-wrapper .goals .custom-item1, .main .goals-wrapper .goals .goal-item {
+.main .header .header-inner .header-inner-slogan-wrapper .inner-slogan, .main .goals-wrapper .goals .goal-item, .main .goals-wrapper .goals .custom-item1, .main .slogan {
   font-weight: bold;
   font-size: 38px;
   line-height: 46px;
 }
 
-.main .slogan, .main .goals-wrapper .goals .custom-item1 {
+.main .goals-wrapper .goals .custom-item1, .main .slogan {
+  background-image: -webkit-gradient(linear, left top, right top, from(#f0145a), to(#ef8080));
   background-image: linear-gradient(90deg, #f0145a, #ef8080);
   -webkit-background-clip: text;
   background-clip: text;
@@ -50,6 +52,7 @@
   padding-bottom: 60px;
   background-image: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643e72 87.46%);
 }
+
 .main::before {
   content: "";
   position: absolute;
@@ -59,6 +62,7 @@
   height: 10px;
   background-color: #cacadb;
 }
+
 .main::after {
   content: "";
   position: absolute;
@@ -68,27 +72,55 @@
   height: 10px;
   background-color: #e7e7f2;
 }
-.main .header {
-  padding-top: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+
+.main .header .header-inner {
+  padding: 50px 0 30px 0;
+  background-image: url(../img/logo/Logo-main.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  min-height: 100vh;
 }
-.main .header .logo-container {
+
+.main .header .header-inner .header-inner-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.main .header .header-contacts {
+
+.main .header .header-inner .header-inner-wrapper .logo-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
-.main .header .header-contacts .langs-list {
+
+.main .header .header-inner .header-inner-wrapper .header-contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .header .header-inner .header-inner-wrapper .header-contacts .langs-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0;
   padding-left: 0;
   list-style: none;
 }
-.main .header .header-contacts .lang-btn {
+
+.main .header .header-inner .header-inner-wrapper .header-contacts .lang-btn {
   display: block;
   padding: 5px 6px;
   border: none;
@@ -102,35 +134,85 @@
   letter-spacing: 1px;
   cursor: pointer;
 }
-.main .header .header-contacts .address,
-.main .header .header-contacts .phone-number,
-.main .header .header-contacts .social-link {
+
+.main .header .header-inner .header-inner-wrapper .header-contacts .address,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-weight: normal;
   color: #ffff;
   text-decoration: none;
 }
-.main .header .header-contacts .phone-number {
+
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number {
   font-weight: bold;
 }
-.main .header .header-contacts .address:hover,
-.main .header .header-contacts .phone-number:hover,
-.main .header .header-contacts .social-link:hover {
+
+.main .header .header-inner .header-inner-wrapper .header-contacts .address:hover,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number:hover,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link:hover {
   color: #c1446b;
 }
-.main .header .header-contacts .lang-btn:hover {
-  box-shadow: inset 0 0 0 2px #f0145a;
+
+.main .header .header-inner .header-inner-wrapper .header-contacts .lang-btn:hover {
+  -webkit-box-shadow: inset 0 0 0 2px #f0145a;
+          box-shadow: inset 0 0 0 2px #f0145a;
 }
-.main .header .header-contacts .lang-btn-active {
+
+.main .header .header-inner .header-inner-wrapper .header-contacts .lang-btn-active {
   background-color: #f0145a;
 }
-.main .header .header-nav {
+
+.main .header .header-inner .header-inner-slogan-wrapper {
+  padding: 361px 0 405px 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main .header .header-inner .header-inner-slogan-wrapper .inner-slogan {
+  color: #ffff;
+}
+
+.main .header .header-inner .inner-button-wrapper {
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main .header .header-inner .inner-button-wrapper .inner-button {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  color: transparent;
+  border: none;
+}
+
+.main .header .header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   gap: 0 15px;
   margin-top: 16px;
 }
+
 .main .header .header-nav .nav-link {
   border-bottom: 2px solid transparent;
   padding-bottom: 2px;
@@ -138,73 +220,115 @@
   color: #fff;
   text-decoration: none;
 }
+
 .main .header .header-nav .nav-link:hover {
   color: #c1446b;
 }
+
 .main .goals-wrapper {
-  margin-top: 60px;
-  padding: 0 120px;
+  margin: 60px;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .main .goals-wrapper .goals {
-  flex-shrink: 1;
-  flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 14.5px 60px 14.5px 0;
   gap: 30px;
-  max-width: 35%;
+  max-width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   border-right: 4px solid rgba(255, 255, 255, 0.3);
 }
+
 .main .goals-wrapper .goals .goal-item {
   color: #b3b3ba;
 }
+
 .main .goals-wrapper .goals .custom-item2 {
   color: #f0145a;
 }
+
 .main .goals-wrapper .goal-slogan {
   padding: 73px 0 73px 60px;
-  max-width: 65%;
+  max-width: 60%;
 }
+
 .main .goals-wrapper .goal-slogan .goal-title {
   font-weight: bold;
   font-size: 30px;
   line-height: 37px;
   color: #ffff;
 }
+
 .main .goals-wrapper .goal-slogan .goal-text {
   margin-top: 30px;
   font-size: 19px;
   line-height: 30px;
   color: #ffff;
 }
+
 .main .services-link {
   margin-top: 60px;
 }
+
 .main .slogan {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin-top: 10px;
 }
+
 .main .services-cards {
   margin: 60px 0 0;
   padding-left: 0;
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 60px 60px;
 }
+
 .main .services-cards .services-card {
-  flex-shrink: 1;
-  flex-grow: 1;
-  flex-basis: 493px;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-preferred-size: 493px;
+      flex-basis: 493px;
 }
+
 .main .services-cards .services-card .card-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   gap: 20px;
 }
+
 .main .services-cards .services-card .card-title {
   margin-top: 30px;
   font-weight: normal;
@@ -213,8 +337,167 @@
   color: #24a3ff;
   font-weight: 500;
 }
+
 .main .services-cards .services-card .card-text {
   margin: 15px 0 0;
 }
 
+.subtitle-main-wrapper {
+  margin-top: 60px;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.subtitle-main-wrapper .subtitle {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #323264;
+}
+
+.company-wrapper {
+  margin-top: 30px;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.company-wrapper .company-link {
+  -ms-flex-preferred-size: calc(100% / 4);
+      flex-basis: calc(100% / 4);
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.company-wrapper .company-logo {
+  width: 100%;
+  height: 100%;
+}
+
+.footer-wrapper {
+  margin: 0;
+  padding-top: 32px;
+  padding-bottom: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer-wrapper .nav-wrapper {
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 21px;
+}
+
+.footer-wrapper .nav-wrapper .address-footer {
+  margin-right: 31px;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #323264;
+}
+
+.footer-wrapper .nav-wrapper .address-footer:hover,
+.footer-wrapper .nav-wrapper .map:hover,
+.footer-wrapper .nav-wrapper .phone-number_footer:hover,
+.footer-wrapper .nav-wrapper .mail-footer:hover {
+  text-decoration: underline;
+}
+
+.footer-wrapper .nav-wrapper .map {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #24a3ff;
+}
+
+.footer-wrapper .nav-wrapper .social-link__footer {
+  font-size: 38px;
+  text-decoration: none;
+  color: #24a3ff;
+}
+
+.footer-wrapper .nav-wrapper .phone-number_footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  color: #46466e;
+}
+
+.footer-wrapper .nav-wrapper .mail-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  color: #24a3ff;
+}
+
+.map::before,
+.phone-number_footer::before,
+.mail-footer::before {
+  content: "";
+  display: block;
+  width: 6px;
+  height: 6px;
+  margin: 0 10px;
+  border-radius: 50%;
+  background-color: #e6e6f0;
+}
+
+.copyright-wrapper {
+  font-size: 16px;
+  line-height: 19px;
+  color: #b3b3ba;
+}
 /*# sourceMappingURL=home.css.map */
