--- a/styles/home.scss
+++ b/styles/home.scss
@@ -37,74 +37,105 @@
   // Header
 
   .header {
-    padding-top: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    //   Лого и контакты
-
-    .logo-container {
-      display: flex;
-      align-items: flex-start;
-    }
-    .header-contacts {
-      display: flex;
-      align-items: center;
-
-      .langs-list {
+    .header-inner {
+      padding: 50px 0 30px 0;
+      background-image: url(../img/logo/Logo-main.svg);
+      background-repeat: no-repeat;
+      background-position: top;
+      min-height: 100vh;
+      .header-inner-wrapper {
         display: flex;
-        margin: 0;
-        padding-left: 0;
-        list-style: none;
-      }
-      .lang-btn {
-        display: block;
-        padding: 5px 6px;
-        border: none;
-        border-radius: 8px;
-        background-color: transparent;
-        color: $color-constant-1;
-        font-weight: bold;
-        font-size: 12px;
-        line-height: 15px;
-        text-align: center;
-        letter-spacing: 1px;
-        cursor: pointer;
-      }
-
-      .address,
-      .phone-number,
-      .social-link {
-        display: flex;
+        justify-content: space-between;
         align-items: center;
-        font-weight: normal;
-        color: $color-constant-1;
-        text-decoration: none;
-        @extend %font-links-header;
-      }
-      .phone-number {
-        font-weight: bold;
-      }
 
-      .address::after,
-      .phone-number::after,
-      .social-link::after {
-        @extend %pseudo-header-links;
-      }
+        //   Лого и контакты
 
-      .address:hover,
-      .phone-number:hover,
-      .social-link:hover {
-        color: $nav-link-hover;
-      }
+        .logo-container {
+          display: flex;
+          align-items: flex-start;
+        }
+        .header-contacts {
+          display: flex;
+          align-items: center;
 
-      .lang-btn:hover {
-        box-shadow: inset 0 0 0 2px $color-hover-btn;
-      }
+          .langs-list {
+            display: flex;
+            margin: 0;
+            padding-left: 0;
+            list-style: none;
+          }
+          .lang-btn {
+            display: block;
+            padding: 5px 6px;
+            border: none;
+            border-radius: 8px;
+            background-color: transparent;
+            color: $color-constant-1;
+            font-weight: bold;
+            font-size: 12px;
+            line-height: 15px;
+            text-align: center;
+            letter-spacing: 1px;
+            cursor: pointer;
+          }
 
-      .lang-btn-active {
-        background-color: $color-hover-btn;
+          .address,
+          .phone-number,
+          .social-link {
+            display: flex;
+            align-items: center;
+            font-weight: normal;
+            color: $color-constant-1;
+            text-decoration: none;
+            @extend %font-links-header;
+          }
+          .phone-number {
+            font-weight: bold;
+          }
+
+          .address::after,
+          .phone-number::after,
+          .social-link::after {
+            @extend %pseudo-header-links;
+          }
+
+          .address:hover,
+          .phone-number:hover,
+          .social-link:hover {
+            color: $nav-link-hover;
+          }
+
+          .lang-btn:hover {
+            box-shadow: inset 0 0 0 2px $color-hover-btn;
+          }
+
+          .lang-btn-active {
+            background-color: $color-hover-btn;
+          }
+        }
+      }
+      .header-inner-slogan-wrapper {
+        padding: 361px 0 405px 0;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        .inner-slogan {
+          @extend %custom-font;
+          color: $color-constant-1;
+        }
+      }
+      .inner-button-wrapper {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        .inner-button {
+          margin: 0;
+          padding: 0;
+          background-color: transparent;
+          cursor: pointer;
+          color: transparent;
+          border: none;
+        }
       }
     }
 
@@ -129,26 +160,20 @@
         }
       }
     }
-    // Блок с логотипом
-    //  .main-logo {
-    //    background-image: url(../img/logo/Logo-main.svg);
-    //  }
-
-    // ============
   }
   // ==========
 
   // Цели
   .goals-wrapper {
-    margin-top: 60px;
-    padding: 0 120px;
+    margin: 60px;
+    padding: 0;
     display: flex;
     .goals {
       flex-shrink: 1;
       flex-grow: 1;
       padding: 14.5px 60px 14.5px 0;
       gap: 30px;
-      max-width: 35%;
+      max-width: 40%;
       display: flex;
       flex-direction: column;
       align-items: flex-end;
@@ -167,7 +192,7 @@
     }
     .goal-slogan {
       padding: 73px 0 73px 60px;
-      max-width: 65%;
+      max-width: 60%;
       .goal-title {
         font-weight: bold;
         font-size: 30px;
@@ -229,4 +254,123 @@
       }
     }
   }
+}
+// Компании
+
+.subtitle-main-wrapper {
+  margin-top: 60px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  .subtitle {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #323264;
+  }
+}
+.company-wrapper {
+  margin-top: 30px;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  overflow: hidden;
+  border-radius: 12px;
+  .company-link {
+    flex-basis: calc(100% / 4);
+    flex-grow: 1;
+  }
+  .company-logo {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+// Футер
+
+.footer-wrapper {
+  margin: 0;
+  padding-top: 32px;
+  padding-bottom: 60px;
+  display: flex;
+  justify-content: space-between;
+
+  .nav-wrapper {
+    margin: 0;
+    padding: 0;
+    width: 25%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 21px;
+
+    .address-footer {
+      margin-right: 31px;
+      text-decoration: none;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      color: #323264;
+    }
+    .address-footer:hover,
+    .map:hover,
+    .phone-number_footer:hover,
+    .mail-footer:hover {
+      text-decoration: underline;
+    }
+    .map {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+      text-decoration: none;
+      font-size: 12px;
+      line-height: 14px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      color: #24a3ff;
+    }
+    .social-link__footer {
+      font-size: 38px;
+      text-decoration: none;
+      color: #24a3ff;
+    }
+    .phone-number_footer {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 19px;
+      color: #46466e;
+    }
+    .mail-footer {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 19px;
+      color: #24a3ff;
+    }
+  }
+}
+
+.map::before,
+.phone-number_footer::before,
+.mail-footer::before {
+  content: "";
+  display: block;
+  width: 6px;
+  height: 6px;
+  margin: 0 10px;
+  border-radius: 50%;
+  background-color: #e6e6f0;
+}
+.copyright-wrapper {
+  font-size: 16px;
+  line-height: 19px;
+  color: #b3b3ba;
 }
