--- a/styles/import.css
+++ b/styles/import.css
@@ -5,9 +5,9 @@
   box-shadow: 0px 5px 6px -4px #223c50;
 }
 
-.main .header .header-contacts .address::after,
-.main .header .header-contacts .phone-number::after,
-.main .header .header-contacts .social-link::after {
+.main .header .header-inner .header-inner-wrapper .header-contacts .address::after,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number::after,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link::after {
   content: "";
   order: -1;
   display: block;
@@ -18,9 +18,9 @@
   background-color: #e6e6f0;
 }
 
-.main .header .header-nav .nav-link, .main .header .header-contacts .address,
-.main .header .header-contacts .phone-number,
-.main .header .header-contacts .social-link {
+.main .header .header-nav .nav-link, .main .header .header-inner .header-inner-wrapper .header-contacts .address,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link {
   font-size: 16px;
   line-height: 20px;
 }
@@ -31,7 +31,7 @@
   color: #ffffff;
 }
 
-.main .slogan, .main .goals-wrapper .goals .custom-item1, .main .goals-wrapper .goals .goal-item {
+.main .slogan, .main .goals-wrapper .goals .custom-item1, .main .goals-wrapper .goals .goal-item, .main .header .header-inner .header-inner-slogan-wrapper .inner-slogan {
   font-weight: bold;
   font-size: 38px;
   line-height: 46px;
@@ -68,27 +68,33 @@
   height: 10px;
   background-color: #e7e7f2;
 }
-.main .header {
-  padding-top: 50px;
+.main .header .header-inner {
+  padding: 50px 0 30px 0;
+  background-image: url(../img/logo/Logo-main.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  min-height: 100vh;
+}
+.main .header .header-inner .header-inner-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.main .header .logo-container {
+.main .header .header-inner .header-inner-wrapper .logo-container {
   display: flex;
   align-items: flex-start;
 }
-.main .header .header-contacts {
+.main .header .header-inner .header-inner-wrapper .header-contacts {
   display: flex;
   align-items: center;
 }
-.main .header .header-contacts .langs-list {
+.main .header .header-inner .header-inner-wrapper .header-contacts .langs-list {
   display: flex;
   margin: 0;
   padding-left: 0;
   list-style: none;
 }
-.main .header .header-contacts .lang-btn {
+.main .header .header-inner .header-inner-wrapper .header-contacts .lang-btn {
   display: block;
   padding: 5px 6px;
   border: none;
@@ -102,28 +108,50 @@
   letter-spacing: 1px;
   cursor: pointer;
 }
-.main .header .header-contacts .address,
-.main .header .header-contacts .phone-number,
-.main .header .header-contacts .social-link {
+.main .header .header-inner .header-inner-wrapper .header-contacts .address,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link {
   display: flex;
   align-items: center;
   font-weight: normal;
   color: #ffff;
   text-decoration: none;
 }
-.main .header .header-contacts .phone-number {
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number {
   font-weight: bold;
 }
-.main .header .header-contacts .address:hover,
-.main .header .header-contacts .phone-number:hover,
-.main .header .header-contacts .social-link:hover {
+.main .header .header-inner .header-inner-wrapper .header-contacts .address:hover,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number:hover,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link:hover {
   color: #c1446b;
 }
-.main .header .header-contacts .lang-btn:hover {
+.main .header .header-inner .header-inner-wrapper .header-contacts .lang-btn:hover {
   box-shadow: inset 0 0 0 2px #f0145a;
 }
-.main .header .header-contacts .lang-btn-active {
+.main .header .header-inner .header-inner-wrapper .header-contacts .lang-btn-active {
   background-color: #f0145a;
+}
+.main .header .header-inner .header-inner-slogan-wrapper {
+  padding: 361px 0 405px 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+.main .header .header-inner .header-inner-slogan-wrapper .inner-slogan {
+  color: #ffff;
+}
+.main .header .header-inner .inner-button-wrapper {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+.main .header .header-inner .inner-button-wrapper .inner-button {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  color: transparent;
+  border: none;
 }
 .main .header .header-nav {
   display: flex;
@@ -142,8 +170,8 @@
   color: #c1446b;
 }
 .main .goals-wrapper {
-  margin-top: 60px;
-  padding: 0 120px;
+  margin: 60px;
+  padding: 0;
   display: flex;
 }
 .main .goals-wrapper .goals {
@@ -151,7 +179,7 @@
   flex-grow: 1;
   padding: 14.5px 60px 14.5px 0;
   gap: 30px;
-  max-width: 35%;
+  max-width: 40%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -165,7 +193,7 @@
 }
 .main .goals-wrapper .goal-slogan {
   padding: 73px 0 73px 60px;
-  max-width: 65%;
+  max-width: 60%;
 }
 .main .goals-wrapper .goal-slogan .goal-title {
   font-weight: bold;
@@ -217,6 +245,122 @@
   margin: 15px 0 0;
 }
 
+.subtitle-main-wrapper {
+  margin-top: 60px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+.subtitle-main-wrapper .subtitle {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #323264;
+}
+
+.company-wrapper {
+  margin-top: 30px;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  overflow: hidden;
+  border-radius: 12px;
+}
+.company-wrapper .company-link {
+  flex-basis: 25%;
+  flex-grow: 1;
+}
+.company-wrapper .company-logo {
+  width: 100%;
+  height: 100%;
+}
+
+.footer-wrapper {
+  margin: 0;
+  padding-top: 32px;
+  padding-bottom: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer-wrapper .nav-wrapper {
+  margin: 0;
+  padding: 0;
+  width: 25%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 21px;
+}
+.footer-wrapper .nav-wrapper .address-footer {
+  margin-right: 31px;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #323264;
+}
+.footer-wrapper .nav-wrapper .address-footer:hover,
+.footer-wrapper .nav-wrapper .map:hover,
+.footer-wrapper .nav-wrapper .phone-number_footer:hover,
+.footer-wrapper .nav-wrapper .mail-footer:hover {
+  text-decoration: underline;
+}
+.footer-wrapper .nav-wrapper .map {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #24a3ff;
+}
+.footer-wrapper .nav-wrapper .social-link__footer {
+  font-size: 38px;
+  text-decoration: none;
+  color: #24a3ff;
+}
+.footer-wrapper .nav-wrapper .phone-number_footer {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  color: #46466e;
+}
+.footer-wrapper .nav-wrapper .mail-footer {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  color: #24a3ff;
+}
+
+.map::before,
+.phone-number_footer::before,
+.mail-footer::before {
+  content: "";
+  display: block;
+  width: 6px;
+  height: 6px;
+  margin: 0 10px;
+  border-radius: 50%;
+  background-color: #e6e6f0;
+}
+
+.copyright-wrapper {
+  font-size: 16px;
+  line-height: 19px;
+  color: #b3b3ba;
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -227,8 +371,20 @@ body {
   margin: 0;
 }
 
-.container {
+.container-1 {
   max-width: 1600px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.container-2 {
+  max-width: 1720px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.container-3 {
+  max-width: 1360px;
   margin: 0 auto;
   padding: 0;
 }
@@ -240,9 +396,9 @@ body {
   box-shadow: 0px 5px 6px -4px #223c50;
 }
 
-.main .header .header-contacts .address::after,
-.main .header .header-contacts .phone-number::after,
-.main .header .header-contacts .social-link::after {
+.main .header .header-inner .header-inner-wrapper .header-contacts .address::after,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number::after,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link::after {
   content: "";
   order: -1;
   display: block;
@@ -253,9 +409,9 @@ body {
   background-color: #e6e6f0;
 }
 
-.main .header .header-contacts .address,
-.main .header .header-contacts .phone-number,
-.main .header .header-contacts .social-link, .main .header .header-nav .nav-link {
+.main .header .header-inner .header-inner-wrapper .header-contacts .address,
+.main .header .header-inner .header-inner-wrapper .header-contacts .phone-number,
+.main .header .header-inner .header-inner-wrapper .header-contacts .social-link, .main .header .header-nav .nav-link {
   font-size: 16px;
   line-height: 20px;
 }
@@ -266,7 +422,7 @@ body {
   color: #ffffff;
 }
 
-.main .goals-wrapper .goals .goal-item, .main .goals-wrapper .goals .custom-item1, .main .slogan {
+.main .header .header-inner .header-inner-slogan-wrapper .inner-slogan, .main .goals-wrapper .goals .goal-item, .main .goals-wrapper .goals .custom-item1, .main .slogan {
   font-weight: bold;
   font-size: 38px;
   line-height: 46px;
