--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -7,17 +7,12 @@ body {
   margin: 0;
 }
 .container-1 {
-  max-width: 1600px;
+  max-width: 1660px;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 30px;
 }
 .container-2 {
   max-width: 1720px;
-  margin: 0 auto;
-  padding: 0;
-}
-.container-3 {
-  max-width: 1360px;
   margin: 0 auto;
   padding: 0;
 }
