--- a/styles/home.css
+++ b/styles/home.css
@@ -32,13 +32,13 @@
   color: #ffffff;
 }
 
-.main .header .header-inner .header-inner-slogan-wrapper .inner-slogan, .main .goals-wrapper .goals .goal-item, .main .goals-wrapper .goals .custom-item1, .main .slogan {
+.main .header .header-inner .header-inner-slogan-wrapper .inner-slogan, .main .slogan {
   font-weight: bold;
   font-size: 38px;
   line-height: 46px;
 }
 
-.main .goals-wrapper .goals .custom-item1, .main .slogan {
+.main .slogan {
   background-image: -webkit-gradient(linear, left top, right top, from(#f0145a), to(#ef8080));
   background-image: linear-gradient(90deg, #f0145a, #ef8080);
   -webkit-background-clip: text;
@@ -78,6 +78,7 @@
   background-image: url(../img/logo/Logo-main.svg);
   background-repeat: no-repeat;
   background-position: top;
+  background-size: auto 100%;
   min-height: 100vh;
 }
 
@@ -225,23 +226,15 @@
   color: #c1446b;
 }
 
-.main .goals-wrapper {
-  margin: 60px;
-  padding: 0;
+.main .experience .container-1 {
+  padding: 30px 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow-x: hidden;
 }
 
-.main .goals-wrapper .goals {
-  -ms-flex-negative: 1;
-      flex-shrink: 1;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  padding: 14.5px 60px 14.5px 0;
-  gap: 30px;
-  max-width: 40%;
+.main .experience .experience__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -249,37 +242,60 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  border-right: 4px solid rgba(255, 255, 255, 0.3);
+  gap: 30px;
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  padding-bottom: 0;
+  padding-right: 60px;
+  text-align: right;
 }
 
-.main .goals-wrapper .goals .goal-item {
-  color: #b3b3ba;
-}
-
-.main .goals-wrapper .goals .custom-item2 {
-  color: #f0145a;
-}
-
-.main .goals-wrapper .goal-slogan {
-  padding: 73px 0 73px 60px;
-  max-width: 60%;
-}
-
-.main .goals-wrapper .goal-slogan .goal-title {
+.main .experience .experience__list .experience__item {
   font-weight: bold;
-  font-size: 30px;
+  font-size: clamp(30px, calc(38 / 1600 * 100vw), 38px);
   line-height: 37px;
-  color: #ffff;
+  color: #b3b3ba;
+  white-space: nowrap;
 }
 
-.main .goals-wrapper .goal-slogan .goal-text {
-  margin-top: 30px;
+.main .experience .experience__list .experience__item--active {
+  color: transparent;
+  background-image: linear-gradient(90.13deg, #ef8080 0.84%, #f0145a 99.96%);
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
+.main .experience .experience__descr {
+  padding-top: clamp(30px, calc(60 / 1600 * 100vw), 60px);
+  border-top: 4px solid rgba(255, 255, 255, 0.3);
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 0;
+  padding-left: 60px;
+  border-top: none;
+  border-left: 4px solid rgba(255, 255, 255, 0.3);
+}
+
+.main .experience .experience__descr .experience__title {
+  margin: 0;
+  font-size: clamp(20px, calc(30 / 1600 * 100vw), 30px);
+  line-height: 24px;
+}
+
+.main .experience .experience__descr .experience__text {
+  margin: 30px 0 0;
   font-size: 19px;
   line-height: 30px;
-  color: #ffff;
 }
 
 .main .services-link {
